--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/patient_hub?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Bornjuly@2001
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/patient_hub?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Bornjuly@2001
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.org.springframework.security=TRACE
+logging.level.com.patientHub.main=TRACE
+
+spring.main.banner-mode=off
+
+
