--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/patient_hub?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=Bornjuly@2001
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-
-
+spring.security.access-denied-page=/access-denied
 logging.level.org.springframework.security=TRACE
 logging.level.com.patientHub.main=TRACE
 
 spring.main.banner-mode=off
 
+#Constants
+role.admin=ADMIN
+role.srdoctor=SRDOCTOR
+role.doctor=DOCTOR
+role.trainee=TRAINEE
 
+patient.gender=Male, Female
+patient.type=IN,OUT
