Logging and Caching implementation

--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.security.access-denied-page=/access-denied
-logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security=DEBUG
 logging.level.com.patientHub.main=TRACE
 
 spring.main.banner-mode=off
