--- a/Patient-Hub/pom.xml
+++ b/Patient-Hub/pom.xml
@@ -75,6 +75,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+       		 <groupId>org.apache.logging.log4j</groupId>
+       		 <artifactId>log4j-api</artifactId>
+       		  <version>2.14.1</version>
+   		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>		
+		     <version>2.14.1</version>    
+		</dependency>
 	</dependencies>
 
 	<build>
