--- a/Patient-Hub/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/Patient-Hub/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -33,5 +33,10 @@
     "name": "patient.type",
     "type": "java.lang.String",
     "description": "A description for 'patient.type'"
+  },
+  {
+    "name": "role.admin",
+    "type": "java.lang.String",
+    "description": "A description for 'role.admin'"
   }
 ]}
