--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -4,7 +4,11 @@ logging.level.com.patientHub.main=TRACE
 
 spring.main.banner-mode=off
 
-#Constants
+spring.profiles.active=dev
+
+spring.main.allow-bean-definition-overriding=true
+
+#Role Constants
 role.admin=ADMIN
 role.srdoctor=SRDOCTOR
 role.doctor=DOCTOR
