--- a/Patient-Hub/src/main/resources/application-prod.properties
+++ b/Patient-Hub/src/main/resources/application-prod.properties
@@ -7,12 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #Role Constants
-role.admin=ROLE_ADMIN
-role.caregiver=ROLE_CAREGIVER
-role.doctor=ROLE_DOCTOR
-role.insurance_agent=ROLE_INSURANCE_AGENT
-role.lab_technician=ROLE_LAB_TECHNICIAN
-role.nurse=ROLE_NURSE
-role.patient=ROLE_PATIENT
-role.pharmacist=ROLE_PHARMACIST
-role.receptionist=ROLE_RECEPTIONIST
+role.admin=ADMIN
+role.caregiver=CAREGIVER
+role.doctor=DOCTOR
+role.insurance_agent=INSURANCE_AGENT
+role.lab_technician=LAB_TECHNICIAN
+role.nurse=NURSE
+role.patient=PATIENT
+role.pharmacist=PHARMACIST
+role.receptionist=RECEPTIONIST
