--- a/Patient-Hub/src/main/resources/application-qa.properties
+++ b/Patient-Hub/src/main/resources/application-qa.properties
@@ -7,11 +7,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #Role Constants
-role.qa_analyst=ROLE_QA_ANALYST
-role.automation_engineer=ROLE_AUTOMATION_ENGINEER
-role.documentation_specialist=ROLE_DOCUMENTATION_SPECIALIST
-role.environment_specialist=ROLE_ENVIRONMENT_SPECIALIST
-role.qa_manager=ROLE_QA_MANAGER
-role.performance_engineer=ROLE_PERFORMANCE_ENGINEER
-role.tester=ROLE_TESTER
-role.test_lead=ROLE_TEST_LEAD
+role.qa_analyst=QA_ANALYST
+role.automation_engineer=AUTOMATION_ENGINEER
+role.documentation_specialist=DOCUMENTATION_SPECIALIST
+role.environment_specialist=ENVIRONMENT_SPECIALIST
+role.qa_manager=QA_MANAGER
+role.performance_engineer=PERFORMANCE_ENGINEER
+role.tester=TESTER
+role.test_lead=TEST_LEAD
