--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.com.patientHub.main=TRACE
 
 spring.main.banner-mode=off
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.main.allow-bean-definition-overriding=true
 
