JUnit implementation for APIs

--- a/Patient-Hub/src/main/resources/application-dev.properties
+++ b/Patient-Hub/src/main/resources/application-dev.properties
@@ -16,3 +16,6 @@ role.security_engineer=SECURITY_ENGINEER
 role.support_engineer=SUPPORT_ENGINEER
 role.system_administrator=SYSTEM_ADMINISTRATOR
 role.team_lead=TEAM_LEAD
+
+patient.gender=Male, Female
+patient.type=IN,OUT
