--- a/Patient-Hub/src/main/resources/application-prod.properties
+++ b/Patient-Hub/src/main/resources/application-prod.properties
@@ -16,3 +16,6 @@ role.nurse=NURSE
 role.patient=PATIENT
 role.pharmacist=PHARMACIST
 role.receptionist=RECEPTIONIST
+
+patient.gender=Male, Female
+patient.type=IN,OUT
