--- a/Patient-Hub/src/main/resources/application-qa.properties
+++ b/Patient-Hub/src/main/resources/application-qa.properties
@@ -15,3 +15,6 @@ role.qa_manager=QA_MANAGER
 role.performance_engineer=PERFORMANCE_ENGINEER
 role.tester=TESTER
 role.test_lead=TEST_LEAD
+
+patient.gender=Male, Female
+patient.type=IN,OUT
