--- a/Patient-Hub/src/main/resources/application-prod.properties
+++ b/Patient-Hub/src/main/resources/application-prod.properties
@@ -1,10 +1,11 @@
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proddb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb2:3306/proddb
 spring.datasource.username=root
 spring.datasource.password=Bornjuly@2001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #Role Constants
 role.admin=ADMIN
