--- a/Patient-Hub/src/main/resources/application.properties
+++ b/Patient-Hub/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.com.patientHub.main=TRACE
 
 spring.main.banner-mode=off
 
-spring.profiles.active=prod
+spring.profiles.active=qa
 
 spring.main.allow-bean-definition-overriding=true
 
@@ -16,3 +16,6 @@ role.trainee=TRAINEE
 
 patient.gender=Male, Female
 patient.type=IN,OUT
+
+#user constants
+password.regex=^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{8,}$
