--- a/Patient-Hub/src/main/resources/application-dev.properties
+++ b/Patient-Hub/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://mysqldb2:3306/devdb
+spring.datasource.url=jdbc:mysql://localhost:3306/devdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Bornjuly@2001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,6 +17,8 @@ role.security_engineer=SECURITY_ENGINEER
 role.support_engineer=SUPPORT_ENGINEER
 role.system_administrator=SYSTEM_ADMINISTRATOR
 role.team_lead=TEAM_LEAD
+
+roles.list=ARCHITECT, DOCUMENTATION_SPECIALIST, DEVELOPER, DEVELOPMENT_MANAGER, QUALITY_ENGINEER, SECURITY_ENGINEER, SUPPORT_ENGINEER, SYSTEM_ADMINISTRATOR, TEAM_LEAD
 
 patient.gender=Male, Female
 patient.type=IN,OUT
