--- a/Patient-Hub/src/main/resources/application-prod.properties
+++ b/Patient-Hub/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://mysqldb2:3306/proddb
+spring.datasource.url=jdbc:mysql://localhost:3306/proddb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Bornjuly@2001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,6 +17,8 @@ role.nurse=NURSE
 role.patient=PATIENT
 role.pharmacist=PHARMACIST
 role.receptionist=RECEPTIONIST
+
+roles.list=ADMIN, CAREGIVER, DOCTOR, INSURANCE_AGENT, LAB_TECHNICIAN, NURSE, PATIENT, PHARMACIST, RECEPTIONIST
 
 patient.gender=Male, Female
 patient.type=IN,OUT
