--- a/Patient-Hub/src/main/resources/application-qa.properties
+++ b/Patient-Hub/src/main/resources/application-qa.properties
@@ -1,6 +1,6 @@
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://mysqldb2:3306/qadb
+spring.datasource.url=jdbc:mysql://localhost:3306/qadb1?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Bornjuly@2001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,6 +16,8 @@ role.qa_manager=QA_MANAGER
 role.performance_engineer=PERFORMANCE_ENGINEER
 role.tester=TESTER
 role.test_lead=TEST_LEAD
+
+roles.list=QA_ANALYST, AUTOMATION_ENGINEER, DOCUMENTATION_SPECIALIST, ENVIRONMENT_SPECIALIST, QA_MANAGER, PERFORMANCE_ENGINEER, TESTER, TEST_LEAD
 
 patient.gender=Male, Female
 patient.type=IN,OUT
